--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>
-  Hola Mundo, {{person}}
-</div>
+<app-my-component></app-my-component>
+<button (click)="count = count + 1" >Click me more {{inputState}}</button>
+<button (click)="inputEnabled = !inputEnabled" >State Input</button>
+<img [src]="imgSource">
+<input [disabled]='inputEnabled'>
