--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-my-component></app-my-component>
-<button (click)="count = count + 1" >Click me more {{inputState}}</button>
+<button (click)="count = count + 1" >Click me more {{count}}</button>
 <button (click)="inputEnabled = !inputEnabled" >State Input</button>
 <img [src]="imgSource">
 <input [disabled]='inputEnabled'>
